[gd_scene load_steps=49 format=2]

[ext_resource path="res://characters/prefabs/mobile_agent.gd" type="Script" id=1]
[ext_resource path="res://systems/sound/ears/ears.tscn" type="PackedScene" id=2]
[ext_resource path="res://systems/utility_ai/stats/bladder.tres" type="Resource" id=3]
[ext_resource path="res://systems/utility_ai/stats/stats.gd" type="Script" id=4]
[ext_resource path="res://systems/utility_ai/ai_brain.gd" type="Script" id=5]
[ext_resource path="res://systems/utility_ai/stats/stat_instance.gd" type="Script" id=6]
[ext_resource path="res://addons/imjp94.yafsm/src/StateMachinePlayer.gd" type="Script" id=7]
[ext_resource path="res://maps/test/Idle.gd" type="Script" id=8]
[ext_resource path="res://systems/utility_ai/ai_behavior.gd" type="Script" id=9]
[ext_resource path="res://addons/imjp94.yafsm/src/states/StateMachine.gd" type="Script" id=10]
[ext_resource path="res://addons/imjp94.yafsm/src/states/State.gd" type="Script" id=11]
[ext_resource path="res://addons/imjp94.yafsm/src/conditions/Condition.gd" type="Script" id=12]
[ext_resource path="res://addons/imjp94.yafsm/src/transitions/Transition.gd" type="Script" id=13]
[ext_resource path="res://characters/sensors/ai_ears.gd" type="Script" id=14]
[ext_resource path="res://characters/prefabs/say.gd" type="Script" id=15]
[ext_resource path="res://characters/prefabs/look_at.gd" type="Script" id=16]
[ext_resource path="res://characters/prefabs/animate.gd" type="Script" id=17]
[ext_resource path="res://characters/prefabs/animate_full.gd" type="Script" id=18]
[ext_resource path="res://characters/prefabs/go_to.gd" type="Script" id=19]
[ext_resource path="res://characters/prefabs/animate_upper.gd" type="Script" id=20]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="CubeMesh" id=2]
size = Vector3( 0.25, 1.5, 0.25 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SphereMesh" id=4]
material = SubResource( 3 )
radius = 0.25
height = 0.5

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.935504, 0.968132, 1, 1 )

[sub_resource type="CylinderMesh" id=6]
material = SubResource( 5 )
top_radius = 0.25
bottom_radius = 0.25
height = 0.75

[sub_resource type="ConvexPolygonShape" id=7]
points = PoolVector3Array( -0.976555, -0.115531, 0.676252, -0.97477, 0.129786, 0.675025, -0.972729, 0.170391, -0.632762, -0.930705, -0.318757, -0.672787, -0.884938, -0.438707, 0.628485, -0.852838, 0.129915, 1.00335, -0.849191, 0.496531, -0.672869, -0.803433, 0.574508, 0.628223, -0.768518, 0.129545, -1.12264, -0.725725, -0.3591, 1.07922, -0.721015, -0.680519, -0.586622, -0.683166, 0.534891, 0.994835, -0.648419, -0.115498, -1.24963, -0.562995, -0.807204, 0.672059, -0.526953, 0.130336, 1.33554, -0.480814, 0.617232, -1.11842, -0.479804, 0.859538, -0.669774, -0.479803, 0.859536, 0.669773, -0.440687, -0.603552, -1.16064, -0.43878, -0.884893, -0.628588, -0.317763, -0.885919, 0.832213, -0.282246, -0.240683, 1.42608, -0.198218, 0.335642, -1.41718, -0.197532, -0.975449, 0.552572, -0.15707, 0.581984, 1.29355, -0.156757, -0.525388, -1.33211, -0.156757, -0.525388, 1.33211, -0.117117, -0.199568, -1.46926, -0.116847, 0.213598, 1.46606, -0.11591, -0.976507, -0.67622, -0.115807, 0.826041, -1.04422, -0.115565, 0.988039, -0.551618, -0.0747357, 0.947977, 0.797463, 0.12956, -0.768424, -1.12278, 0.129786, -0.97477, 0.675025, 0.171135, 0.58102, -1.29182, 0.172267, 0.172267, -1.46605, 0.2128, -0.321832, 1.41923, 0.25284, 0.825812, -1.0032, 0.253122, 0.949838, 0.676403, 0.29257, -0.686201, 1.16252, 0.332014, 0.94129, -0.507643, 0.33379, 0.61975, 1.20479, 0.335646, -0.19822, -1.41719, 0.378044, -0.0339178, 1.42212, 0.413277, -0.845586, -0.832511, 0.453569, -0.885709, -0.54779, 0.496551, -0.441258, -1.24375, 0.496608, -0.849134, 0.672975, 0.572962, 0.775053, 0.747599, 0.577133, 0.332796, -1.24188, 0.654399, 0.735187, -0.667508, 0.700886, 0.25188, 1.16319, 0.736328, -0.560023, 0.871037, 0.742227, -0.237757, -1.12308, 0.742233, -0.237759, 1.12309, 0.85642, 0.492308, 0.626846, 0.856435, 0.492317, -0.626858, 0.859536, -0.479803, -0.669773, 0.866929, 0.170866, -0.962149, 0.899981, -0.398467, 0.669636, 0.990148, -0.0336554, -0.593795, 0.990984, 0.0890012, 0.553274, 0.991375, 0.00714278, 0.594536 )

[sub_resource type="Animation" id=8]
resource_name = "Annoyed"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Body/Indicator:mesh:material:albedo_color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Body/Indicator:mesh:material:albedo_color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.505882, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Body/Indicator:mesh:material:albedo_color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Body/Indicator:mesh:material:albedo_color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[sub_resource type="Animation" id=9]
tracks/0/type = "bezier"
tracks/0/path = NodePath("Body/Indicator:mesh:material:albedo_color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Body/Indicator:mesh:material:albedo_color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.505882, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.505882, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Body/Indicator:mesh:material:albedo_color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Body/Indicator:mesh:material:albedo_color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[sub_resource type="Animation" id=10]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Body:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 90, 0, 0 ), Vector3( 90, -45, 0 ), Vector3( 90, 0, 0 ), Vector3( 90, 45, 0 ), Vector3( 90, 0, 0 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "UrinateStanding"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Body/Indicator:mesh:material:albedo_color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Body/Indicator:mesh:material:albedo_color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.937255, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.937255, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Body/Indicator:mesh:material:albedo_color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Body/Indicator:mesh:material:albedo_color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[sub_resource type="Resource" id=12]
script = ExtResource( 11 )
__meta__ = {
"graph_offset": Vector2( 0, 0 )
}
name = "Entry"

[sub_resource type="Resource" id=13]
script = ExtResource( 11 )
__meta__ = {
"graph_offset": Vector2( 100, 240 )
}
name = "GoTo"

[sub_resource type="Resource" id=14]
script = ExtResource( 11 )
__meta__ = {
"graph_offset": Vector2( 280, 0 )
}
name = "Idle"

[sub_resource type="Resource" id=15]
script = ExtResource( 11 )
__meta__ = {
"graph_offset": Vector2( 400, 240 )
}
name = "UseSmartObject"

[sub_resource type="Resource" id=16]
script = ExtResource( 13 )
from = "Entry"
to = "Idle"
conditions = {
}

[sub_resource type="Resource" id=17]
script = ExtResource( 13 )
from = "Entry"
to = "Idle"
conditions = {
}

[sub_resource type="Resource" id=18]
script = ExtResource( 12 )
name = "arrived_at_target"

[sub_resource type="Resource" id=19]
script = ExtResource( 13 )
from = "GoTo"
to = "Idle"
conditions = {
"arrived_at_target": SubResource( 18 )
}

[sub_resource type="Resource" id=20]
script = ExtResource( 12 )
name = "target_unset"

[sub_resource type="Resource" id=21]
script = ExtResource( 13 )
from = "GoTo"
to = "Idle"
conditions = {
"target_unset": SubResource( 20 )
}

[sub_resource type="Resource" id=22]
script = ExtResource( 12 )
name = "arrived_at_target"

[sub_resource type="Resource" id=23]
script = ExtResource( 13 )
from = "GoTo"
to = "UseSmartObject"
conditions = {
"arrived_at_target": SubResource( 22 )
}

[sub_resource type="Resource" id=24]
script = ExtResource( 12 )
name = "target_set"

[sub_resource type="Resource" id=25]
script = ExtResource( 13 )
from = "Idle"
to = "GoTo"
conditions = {
"target_set": SubResource( 24 )
}

[sub_resource type="Resource" id=26]
script = ExtResource( 13 )
from = "UseSmartObject"
to = "Idle"
conditions = {
}

[sub_resource type="Resource" id=27]
script = ExtResource( 13 )
from = "UseSmartObject"
to = "Idle"
conditions = {
}

[sub_resource type="Resource" id=28]
script = ExtResource( 10 )
name = ""
states = {
"Entry": SubResource( 12 ),
"GoTo": SubResource( 13 ),
"Idle": SubResource( 14 ),
"UseSmartObject": SubResource( 15 )
}
transitions = {
"Entry": {
"Animate": SubResource( 16 ),
"Idle": SubResource( 17 )
},
"GoTo": {
"Animate": SubResource( 19 ),
"Idle": SubResource( 21 ),
"UseSmartObject": SubResource( 23 )
},
"Idle": {
"GoTo": SubResource( 25 )
},
"UseSmartObject": {
"Animate": SubResource( 26 ),
"Idle": SubResource( 27 )
}
}

[node name="AIAgent" type="KinematicBody" groups=[
"mobile_agents",
]]
collision_layer = 2
script = ExtResource( 1 )

[node name="Brain" type="Node" parent="."]
script = ExtResource( 5 )

[node name="ThinkTimer" type="Timer" parent="Brain"]
wait_time = 2.0
autostart = true

[node name="Stats" type="Node" parent="Brain"]
script = ExtResource( 4 )

[node name="Bladder" type="Node" parent="Brain/Stats"]
script = ExtResource( 6 )
stat = ExtResource( 3 )

[node name="Idle" type="Node" parent="Brain"]
script = ExtResource( 9 )

[node name="Idle" type="Node" parent="Brain/Idle"]
script = ExtResource( 8 )
weight = 0.001

[node name="Ears" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0 )
script = ExtResource( 14 )
brain_node = NodePath("../Brain")

[node name="Body" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.5, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="MatchStick" type="MeshInstance" parent="Body"]
transform = Transform( 1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, -0.639564, -1.46883 )
mesh = SubResource( 2 )
material/0 = null

[node name="MatchHead" type="MeshInstance" parent="Body/MatchStick"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.827308, -9.53674e-07 )
mesh = SubResource( 4 )
material/0 = null

[node name="Indicator" type="MeshInstance" parent="Body"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, -2.44382e-07, -1.5 )
mesh = SubResource( 6 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1.5, 0 )
shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Annoyed = SubResource( 8 )
anims/Idle = SubResource( 9 )
anims/LookAround = SubResource( 10 )
anims/UrinateStanding = SubResource( 11 )

[node name="StateMachinePlayer" type="Node" parent="."]
script = ExtResource( 7 )
state_machine = SubResource( 28 )
active = false
autostart = false
process_mode = 0

[node name="Say" type="Node" parent="."]
script = ExtResource( 15 )
locks = 8

[node name="GoTo" type="Node" parent="."]
script = ExtResource( 19 )
locks = 1

[node name="LookAt" type="Node" parent="."]
script = ExtResource( 16 )
locks = 4

[node name="Animate" type="Node" parent="."]
script = ExtResource( 17 )
locks = 3

[node name="AnimateFull" type="Node" parent="."]
script = ExtResource( 18 )
locks = 15

[node name="AnimateUpper" type="Node" parent="."]
script = ExtResource( 20 )
locks = 2

[connection signal="timeout" from="Brain/ThinkTimer" to="Brain" method="think_and_act"]
[connection signal="transited" from="StateMachinePlayer" to="." method="_on_StateMachinePlayer_transited"]
[connection signal="updated" from="StateMachinePlayer" to="." method="_on_StateMachinePlayer_updated"]
